--- a/Modules/dashboard/Views/js/widget.css
+++ b/Modules/dashboard/Views/js/widget.css
@@ -22,20 +22,47 @@
   padding: 0px;
 }
 
-.Container-BlueLine {
-  
+.Container-BlueLine {  
   border: 3px solid #0d97f3;
   box-shadow: 0px 0px 2px 2px rgba(200, 200, 200, 0.7);
   margin: 0px;
   padding: 0px;
 }
 
-.heading-center {
+
+.heading {
   font-weight:bold;
   font-size:24px;
   padding-top:20px;
+}
+.heading-center {
+  font-weight:bold;
+  font-size:24px;
+  padding-top:10px;
+  padding-bottom:10px;
   text-align:center;
 }
+
+.pragraph {
+  font-size:12px;
+  padding-top:0px;
+  text-align:left;
+}
+
+.html-list {
+  font-size:12px;
+  padding-top:00px;
+  padding-bottom:0px;
+}
+
+.html-image img{
+  padding-top:0px;
+  padding-bottom:0px;
+  vertical-align:top;
+  border:1px;
+
+}
+
 
 .feedvalue {
   font-weight:bold;
@@ -43,10 +70,4 @@
   padding-top:20px;
   text-align:center;
   color:#4444CC;
-}
-
-.heading {
-  font-weight:bold;
-  font-size:24px;
-  padding-top:20px;
 }
