--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -1,3 +1,4 @@
+          html, body { height: 100%; }
 select,
 textarea,
 input[type="text"],
@@ -16,4 +17,31 @@ input[type="tel"],
 input[type="color"],
 .uneditable-input {
 	margin-bottom:-6px;
+}
+          #wrap {
+            min-height: 100%;
+            height: auto !important;
+            height: 100%;
+            /* Negative indent footer by it's height */
+            margin: 0 auto -40px;
+          }
+
+ #push,
+#footer {
+height: 30px;
+}
+
+#footer {
+background-color: #f5f5f5;
+
+text-align: center;
+font-size: 13px;
+font-weight: bold;
+
+padding-top:10px;
+}
+
+#footer a {
+color: #77b4d9;
+text-decoration: none;
 }
