use bootstrap3-dialog to handle modal dialogs (feed deletion confirmation)

--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -45,6 +45,14 @@ padding-top:10px;
 color: #77b4d9;
 text-decoration: none;
 }
+.alert-block{
+  background-color: #EABBA5;
+  opacity:1;
+  border-radius: 10px;
+  padding:10px;
+
+}
+
 
 .float-right
 {
