add helptext property to widgets.  It is displayed with configuration

--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -83,3 +83,48 @@ margin-left: 0px;
 .navbar{
   margin-bottom :0px;
 }
+
+/*
+required for the dashboard submenu
+*/
+
+.dashlist{
+  float:left;
+   color:#888;
+    font: 13px/27px sans-serif;
+    font-weight:bold; 
+}
+
+.greydashmenu {
+  display: block;
+  list-style: none outside none;
+  margin: 0;
+  padding: 0;
+}
+
+.greydashmenu li {
+  list-style: none outside none;
+  margin: 0;
+  padding: 0;
+  border-right: 1px solid #eee;
+  float: left;
+}
+
+.greydashmenu li a {
+  display: block;
+  margin: 0;
+  padding: 0 12px;
+  border-right: 1px solid #ccc;
+  text-decoration: none;
+  font: 13px/27px sans-serif;
+  text-transform: none;
+}
+
+
+/*
+login block flags size style
+*/
+#flags img{
+  width:16px;
+  height:16px;  
+}
