--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -142,3 +142,122 @@ login block flags size style
 .glyphicon {
   cursor:pointer;
 }
+
+
+.emoncms-dialog .modal-header {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+.emoncms-dialog .emoncms-dialog-title {
+    color: #fff;
+    display: inline-block;
+}
+.emoncms-dialog.type-default .emoncms-dialog-title {
+    color: #333;
+}
+.emoncms-dialog.size-normal .emoncms-dialog-title {
+    font-size: 16px;
+}
+.emoncms-dialog.size-large .emoncms-dialog-title {
+    font-size: 24px;
+}
+.emoncms-dialog .emoncms-dialog-close-button {
+    float: right;
+    filter:alpha(opacity=90);
+    -moz-opacity:0.9;
+    -khtml-opacity: 0.9;
+    opacity: 0.9;
+}
+.emoncms-dialog.size-normal .emoncms-dialog-close-button {
+    font-size: 20px;
+}
+.emoncms-dialog.size-large .emoncms-dialog-close-button {
+    font-size: 30px;
+}
+.emoncms-dialog .emoncms-dialog-close-button:hover {
+    cursor: pointer;
+    filter: alpha(opacity=100);
+    -moz-opacity: 1;
+    -khtml-opacity: 1;
+    opacity: 1;
+}
+.emoncms-dialog.size-normal .emoncms-dialog-message {
+    font-size: 14px;
+}
+.emoncms-dialog.size-large .emoncms-dialog-message {
+    font-size: 18px;
+}
+.emoncms-dialog.type-default .modal-header {
+    background-color: #fff;
+}
+.emoncms-dialog.type-info .modal-header {
+    background-color: #5bc0de;
+}
+.emoncms-dialog.type-primary .modal-header {
+    background-color: #428bca;
+}
+.emoncms-dialog.type-success .modal-header {
+    background-color: #5cb85c;
+}
+.emoncms-dialog.type-warning .modal-header {
+    background-color: #f0ad4e;
+}
+.emoncms-dialog.type-danger .modal-header {
+    background-color: #d9534f;
+}
+.emoncms-dialog .emoncms-dialog-button-icon {
+    margin-right: 3px;
+}
+
+/**
+ * Icon animation
+ * Copied from font-awesome: http://fontawesome.io/
+ **/
+.icon-spin {
+    display: inline-block;
+    -moz-animation: spin 2s infinite linear;
+    -o-animation: spin 2s infinite linear;
+    -webkit-animation: spin 2s infinite linear;
+    animation: spin 2s infinite linear;
+}
+@-moz-keyframes spin {
+    0% {
+    -moz-transform: rotate(0deg);
+}
+100% {
+    -moz-transform: rotate(359deg);
+}
+}
+@-webkit-keyframes spin {
+    0% {
+    -webkit-transform: rotate(0deg);
+}
+100% {
+    -webkit-transform: rotate(359deg);
+}
+}
+@-o-keyframes spin {
+    0% {
+    -o-transform: rotate(0deg);
+}
+100% {
+    -o-transform: rotate(359deg);
+}
+}
+@-ms-keyframes spin {
+    0% {
+    -ms-transform: rotate(0deg);
+}
+100% {
+    -ms-transform: rotate(359deg);
+}
+}
+@keyframes spin {
+    0% {
+    transform: rotate(0deg);
+}
+100% {
+    transform: rotate(359deg);
+}
+}
+/** End of icon animation **/
