--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -72,6 +72,7 @@ text-decoration: none;
     float: left;
 }
 .container {
+  width:inherit;
 padding-right: 15px;
 padding-left: 15px;
 margin-right: 0px;
@@ -123,6 +124,9 @@ required for the dashboard submenu
   text-transform: none;
 }
 
+    .form-inline .form-group input select{
+    width:140px;
+}
 
 /*
 login block flags size style
