change user list admin view reset password feedback message, non modal removed trailing spaces where found, adjust theme.css for new alert message

--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -185,6 +185,13 @@ login block flags size style
     font-size:12px
 }
 
+.alertmsg {
+    position:absolute;
+    margin-top:50px;
+    z-index:1;
+}
+
+
 .readapikey .writeapikey  {
 
 }
