change alert message position absolute to position fixed

--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -186,7 +186,7 @@ login block flags size style
 }
 
 .alertmsg {
-    position:absolute;
+    position:fixed;
     margin-top:50px;
     z-index:1;
 }
