--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -65,6 +65,16 @@ h2{
     padding:10px;
 }
 
+.feedback{
+    margin-top: 0px;
+    display: block;
+    line-height: 25px;
+    position: fixed;
+    font-size: 30px;
+    margin-left: 250px;
+    border-radius: 10px;
+    padding:10px;
+}
 
 .float-right
 {
