Reduce the number of dashbord sub menu items. Added a menu flag to keep important dashbords quickly accessible via sub menu

--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -110,7 +110,11 @@ h2{
 /*
 required for the dashboard submenu
 */
-
+.menudash{
+    width:90%;
+    height:50px;
+    overflow: hidden;
+}
 .dashlist{
     float:left;
     color:#888;
