Adapt input_view to BS3 use a BS3 dialog instead of a hidden top form to add and sort processes instal a not yet perfect expand - collapse command on to of list change command icons to separate deletions frolm editions add some translatabilities to the input view keep access to API instructions even if not empty list (with an icon) correct some disfunctioning login block

--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -161,6 +161,11 @@ required for the dashboard submenu
     background-color: #faf2cc;
 }
 
+.shortpading{
+    padding-right: 1px;
+    padding-left: 1px;
+}
+
 tbody  tr .form-control{
     height: 24px;
     margin-bottom: -4px;
@@ -212,6 +217,13 @@ login block flags size style
 
 .readapikey .writeapikey  {
 
+}
+
+.modal.modal-wide .modal-dialog {
+  width: 90%;
+}
+.modal-wide .modal-body {
+  overflow-y: auto;
 }
 
 
