--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -179,7 +179,10 @@ tbody  tr .form-control{
     padding-right:15px;
 }
 
-
+a:hover{
+    text-decoration: none;
+    cursor: pointer;
+}
 /*
 login block flags size style
 */
