--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -43,7 +43,9 @@ input[type="color"],
 .glyphicon:empty{
     margin-right: 7px;
 }
-
+.glyphicon {
+    text-shadow: grey 2px 2px 3px;
+}
 h2{
     margin-top: 1px;
 }
@@ -110,6 +112,9 @@ h2{
 
 .key{
     width: 300px;
+}
+.label{
+    box-shadow: grey 1px 1px 2px;
 }
 /*
 required for the dashboard submenu
@@ -262,7 +267,6 @@ login block flags size style
 .modal-wide .modal-body {
   overflow-y: auto;
 }
-
 
 .emoncms-dialog .modal-header {
     border-top-left-radius: 4px;
