--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -38,7 +38,9 @@ input[type="color"],
     margin-top: 60px;
 }
 .glyphicon:empty{
-    margin-right: 7px;
+    margin-right: 5px;
+    vertical-align: middle;
+    font-size: larger;
 }
 .glyphicon {
     text-shadow: grey 2px 2px 3px;
