--- a/Theme/theme.css
+++ b/Theme/theme.css
@@ -275,7 +275,18 @@ login block flags size style
 .readapikey .writeapikey  {
 
 }
+/* used in the dashboard design context menu*/
+.dropdown-menu > .disabled{
+ cursor: not-allowed;
+}
 
+/* The real magic ;) */
+.dropdown-menu > .disabled > a{
+ pointer-events: none;
+}
+/* end of used in the dashboard design context menu*/
+
+view raw
 .modal.modal-wide .modal-dialog {
   width: 90%;
 }
