--- a/Modules/dashboard/Views/js/widget.css
+++ b/Modules/dashboard/Views/js/widget.css
@@ -1,4 +1,4 @@
-.Container-White {
+.Container-White, .html-cont-White {
   background: none repeat scroll 0 0 #FFFFFF;
   border: 1px solid #E5E5E5;
   box-shadow: 0 4px 10px -1px rgba(200, 200, 200, 0.7);
@@ -6,7 +6,7 @@
   padding: 0px;
 }
 
-.Container-Grey {
+.Container-Grey, .html-cont-Grey {
   background: none repeat scroll 0 0 #ddd;
   border: 1px solid #ccc;
   box-shadow: 0 4px 10px -1px rgba(200, 200, 200, 0.7);
@@ -14,7 +14,7 @@
   padding: 0px;
 }
 
-.Container-Black {
+.Container-Black, .html-cont-Black {
   background: none repeat scroll 0 0 #000;
   border: 1px solid #888;
   box-shadow: 0 4px 10px -1px rgba(200, 200, 200, 0.7);
@@ -22,7 +22,7 @@
   padding: 0px;
 }
 
-.Container-BlueLine {  
+.Container-BlueLine, .html-cont-BlueLine {
   border: 3px solid #0d97f3;
   box-shadow: 0px 0px 2px 2px rgba(200, 200, 200, 0.7);
   margin: 0px;
@@ -30,12 +30,12 @@
 }
 
 
-.heading {
+.html-heading, .heading {
   font-weight:bold;
   font-size:24px;
   padding-top:20px;
 }
-.heading-center {
+.html-heading-center, .heading-center {
   font-weight:bold;
   font-size:24px;
   padding-top:10px;
@@ -43,13 +43,13 @@
   text-align:center;
 }
 
-.pragraph {
+.html-pragraph, .pragraph {
   font-size:12px;
   padding-top:0px;
   text-align:left;
 }
 
-.html-list {
+.html-list, .list {
   font-size:12px;
   padding-top:00px;
   padding-bottom:0px;
@@ -64,7 +64,7 @@
 }
 
 
-.feedvalue {
+.html-feedvalue, .feedvalue {
   font-weight:bold;
   font-size:24px;
   padding-top:20px;
